--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     <h2>Choose Grid Size</h2>
     <form id="sizePicker">
-        Grid Height:
-        <input type="number" id="input_height" name="height" min="1" value="10">
-        Grid Width:
-        <input type="number" id="input_width" name="width" min="1" value="10">
+        <label for="input_height">Grid Height: </label>
+        <input type="number" id="input_height" name="height" min="1" max="30" value="10" required>
+        <label for="input_height">Grid Width: </label>
+        <input type="number" id="input_width" name="width" min="1" max="50" value="10" required>
         <input type="submit">
     </form>
 
